--- a/index.html
+++ b/index.html
@@ -47,7 +47,7 @@
       </section>
       <!--Особенности-->
       <section class="features">
-        <h2>Наши особенности</h2>
+        <h2 class="visually-hidden">Наши особенности</h2>
         <ul class="features-list list">
           <li class="features-item">
             <h3 class="features-name">Внимание к деталям</h3>
