--- a/portfolio.html
+++ b/portfolio.html
@@ -41,7 +41,7 @@
     <main>
       <!-- Портфолио проектов -->
       <section>
-        <h1>Портфолио проектов</h1>
+        <h1 class="visually-hidden">Портфолио проектов</h1>
         <ul class="filter-list list">
           <li><button class="filter-item" type="button">Все</button></li>
           <li><button class="filter-item" type="button">Веб-сайты</button></li>
