--- a/index.html
+++ b/index.html
@@ -6,6 +6,12 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
     <title>Студия</title>
     <link
+      href="https://fonts.googleapis.com/css2?family=Raleway:wght@700&family=Roboto:wght@400;500;700;900&display=swap"
+      rel="stylesheet"
+    />
+    <link rel="preconnect" href="https://fonts.googleapis.com" />
+    <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin />
+    <link
       rel="stylesheet"
       href="https://cdnjs.cloudflare.com/ajax/libs/modern-normalize/1.1.0/modern-normalize.min.css"
       integrity="sha512-wpPYUAdjBVSE4KJnH1VR1HeZfpl1ub8YT/NKx4PuQ5NmX2tKuGu6U/JRp5y+Y8XG2tV+wKQpNHVUX03MfMFn9Q=="
@@ -13,29 +19,25 @@
       referrerpolicy="no-referrer"
     />
     <link rel="stylesheet" href="./css/styles.css" />
-    <link rel="preconnect" href="https://fonts.googleapis.com" />
-    <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin />
-    <link
-      href="https://fonts.googleapis.com/css2?family=Raleway:wght@700&family=Roboto:wght@400;500;700;900&display=swap"
-      rel="stylesheet"
-    />
   </head>
 
   <body>
     <!--Шапка сайта-->
     <header class="header">
-      <nav>
-        <a class="logo" href="./index.html">Web<span class="logo-part">Studio</span></a>
-        <ul class="site-nav list">
-          <li><a href="./index.html" class="link">Студия</a></li>
-          <li><a href="./portfolio.html" class="link">Портфолио</a></li>
-          <li><a href="" class="link">Контакты</a></li>
+      <div class="container">
+        <nav>
+          <a class="logo" href="./index.html">Web<span class="logo-part">Studio</span></a>
+          <ul class="site-nav list">
+            <li><a href="./index.html" class="link">Студия</a></li>
+            <li><a href="./portfolio.html" class="link">Портфолио</a></li>
+            <li><a href="" class="link">Контакты</a></li>
+          </ul>
+        </nav>
+        <ul class="contacts list">
+          <li><a href="mailto:info@devstudio.com" class="link">info@devstudio.com</a></li>
+          <li><a href="tel:+380961111111" class="link">+38 096 111 11 11</a></li>
         </ul>
-      </nav>
-      <ul class="contacts list">
-        <li><a href="mailto:info@devstudio.com" class="link">info@devstudio.com</a></li>
-        <li><a href="tel:+380961111111" class="link">+38 096 111 11 11</a></li>
-      </ul>
+      </div>
     </header>
 
     <!--Основной контент-->
@@ -46,124 +48,137 @@
         <button class="hero-button" type="button">Заказать услугу</button>
       </section>
       <!--Особенности-->
-      <section class="features">
-        <h2 class="visually-hidden">Наши особенности</h2>
-        <ul class="features-list list">
-          <li class="features-item">
-            <h3 class="features-name">Внимание к деталям</h3>
-            <p class="features-text">
-              Идейные соображения, а также начало повседневной работы по формированию позиции.
-            </p>
-          </li>
-          <li class="features-item">
-            <h3 class="features-name">Пунктуальность</h3>
-            <p class="features-text">
-              Задача организации, в особенности же рамки и место обучения кадров влечет за собой.
-            </p>
-          </li>
-          <li class="features-item">
-            <h3 class="features-name">Планирование</h3>
-            <p class="features-text">
-              Равным образом консультация с широким активом в значительной степени обуславливает.
-            </p>
-          </li>
-          <li class="features-item">
-            <h3 class="features-name">Современные технологии</h3>
-            <p class="features-text">
-              Значимость этих проблем настолько очевидна, что реализация плановых заданий.
-            </p>
-          </li>
-        </ul>
+      <section class="features section">
+        <div class="container">
+          <h2 class="visually-hidden">Наши особенности</h2>
+          <ul class="features-list list">
+            <li class="features-item">
+              <h3 class="features-name">Внимание к деталям</h3>
+              <p class="features-text">
+                Идейные соображения, а также начало повседневной работы по формированию позиции.
+              </p>
+            </li>
+            <li class="features-item">
+              <h3 class="features-name">Пунктуальность</h3>
+              <p class="features-text">
+                Задача организации, в особенности же рамки и место обучения кадров влечет за собой.
+              </p>
+            </li>
+            <li class="features-item">
+              <h3 class="features-name">Планирование</h3>
+              <p class="features-text">
+                Равным образом консультация с широким активом в значительной степени обуславливает.
+              </p>
+            </li>
+            <li class="features-item">
+              <h3 class="features-name">Современные технологии</h3>
+              <p class="features-text">
+                Значимость этих проблем настолько очевидна, что реализация плановых заданий.
+              </p>
+            </li>
+          </ul>
+        </div>
       </section>
       <!--Чем мы занимаемся-->
-      <section class="services">
-        <h2 class="section-title">Чем мы занимаемся</h2>
-        <ul class="services-list list">
-          <li>
-            <img src="./images/box1.jpg" alt="Руки на клавиатуре" width="370" height="294" />
-          </li>
-          <li>
-            <img
-              src="./images/box2.jpg"
-              alt="В одной руке телефон вторая рука на клавиатуре"
-              width="370"
-              height="294"
-            />
-          </li>
-          <li>
-            <img src="./images/box3.jpg" alt="В руках планшет и стилус" width="370" height="294" />
-          </li>
-        </ul>
+      <section class="services section">
+        <div class="container">
+          <h2 class="section-title">Чем мы занимаемся</h2>
+          <ul class="services-list list">
+            <li>
+              <img src="./images/box1.jpg" alt="Руки на клавиатуре" width="370" height="294" />
+            </li>
+            <li>
+              <img
+                src="./images/box2.jpg"
+                alt="В одной руке телефон вторая рука на клавиатуре"
+                width="370"
+                height="294"
+              />
+            </li>
+            <li>
+              <img
+                src="./images/box3.jpg"
+                alt="В руках планшет и стилус"
+                width="370"
+                height="294"
+              />
+            </li>
+          </ul>
+        </div>
       </section>
       <!--Наша команда-->
-      <section class="team">
-        <h2 class="section-title">Наша команда</h2>
-        <ul class="members-list list">
-          <li class="member-item">
-            <img
-              src="./images/teammember1.jpg"
-              alt="Мужчина в очках с бородой"
-              width="270"
-              height="260"
-            />
-            <h3 class="member-name">Игорь Демьяненко</h3>
-            <p class="member-position">Product Designer</p>
-          </li>
-          <li class="member-item">
-            <img
-              src="./images/teammember2.jpg"
-              alt="Девушка блондинка в очках"
-              width="270"
-              height="260"
-            />
-            <h3 class="member-name">Ольга Репина</h3>
-            <p class="member-position">Frontend Developer</p>
-          </li>
-          <li class="member-item">
-            <img
-              src="./images/teammember3.jpg"
-              alt="Мужчина с широкой улыбкой"
-              width="270"
-              height="260"
-            />
-            <h3 class="member-name">Николай Тарасов</h3>
-            <p class="member-position">Marketing</p>
-          </li>
-          <li>
-            <img
-              src="./images/teammember4.jpg"
-              alt="Мужчина с бородой в очках"
-              width="270"
-              height="260"
-            />
-            <h3 class="member-name">Михаил Ермаков</h3>
-            <p class="member-position">UI Designer</p>
-          </li>
-        </ul>
+      <section class="team section">
+        <div class="container">
+          <h2 class="section-title">Наша команда</h2>
+          <ul class="members-list list">
+            <li class="member-item">
+              <img
+                src="./images/teammember1.jpg"
+                alt="Мужчина в очках с бородой"
+                width="270"
+                height="260"
+              />
+              <h3 class="member-name">Игорь Демьяненко</h3>
+              <p class="member-position">Product Designer</p>
+            </li>
+            <li class="member-item">
+              <img
+                src="./images/teammember2.jpg"
+                alt="Девушка блондинка в очках"
+                width="270"
+                height="260"
+              />
+              <h3 class="member-name">Ольга Репина</h3>
+              <p class="member-position">Frontend Developer</p>
+            </li>
+            <li class="member-item">
+              <img
+                src="./images/teammember3.jpg"
+                alt="Мужчина с широкой улыбкой"
+                width="270"
+                height="260"
+              />
+              <h3 class="member-name">Николай Тарасов</h3>
+              <p class="member-position">Marketing</p>
+            </li>
+            <li>
+              <img
+                src="./images/teammember4.jpg"
+                alt="Мужчина с бородой в очках"
+                width="270"
+                height="260"
+              />
+              <h3 class="member-name">Михаил Ермаков</h3>
+              <p class="member-position">UI Designer</p>
+            </li>
+          </ul>
+        </div>
       </section>
     </main>
     <!--Подвал сайта-->
     <footer class="footer">
-      <a class="logo" href="./index.html">Web<span class="logo-studio">Studio</span></a>
-      <address class="address">
-        <ul class="list">
-          <li>
-            <a
-              class="location"
-              href="https://goo.gl/maps/8b3qc9g8HUJVJRzd8"
-              target="_blank"
-              rel="noopener noreferrer"
-              >г. Киев, пр-т Леси Украинки, 26</a
-            >
-          </li>
-          <li>
-            <a class="address-contacts" href="mailto:info@example.com">info@example.com</a>
-          </li>
-          <li>
-            <a class="address-contacts" href="tel:+380991111111">+38 099 111 11 11</a>
-          </li>
-        </ul>
-      </address>
+      <div class="container">
+        <a class="logo" href="./index.html">Web<span class="logo-studio">Studio</span></a>
+        <address class="address">
+          <ul class="list">
+            <li>
+              <a
+                class="location"
+                href="https://goo.gl/maps/8b3qc9g8HUJVJRzd8"
+                target="_blank"
+                rel="noopener noreferrer"
+                >г. Киев, пр-т Леси Украинки, 26</a
+              >
+            </li>
+            <li>
+              <a class="address-contacts" href="mailto:info@example.com">info@example.com</a>
+            </li>
+            <li>
+              <a class="address-contacts" href="tel:+380991111111">+38 099 111 11 11</a>
+            </li>
+          </ul>
+        </address>
+      </div>
     </footer>
   </body>
 </html>
