--- a/index.html
+++ b/index.html
@@ -28,7 +28,7 @@
         <nav class="nav">
           <a class="logo" href="./index.html">Web<span class="logo-part">Studio</span></a>
           <ul class="site-nav list">
-            <li class="item"><a href="./index.html" class="link">Студия</a></li>
+            <li class="item"><a href="./index.html" class="link current">Студия</a></li>
             <li class="item"><a href="./portfolio.html" class="link">Портфолио</a></li>
             <li class="item"><a href="" class="link">Контакты</a></li>
           </ul>
@@ -86,10 +86,10 @@
         <div class="container">
           <h2 class="section-title">Чем мы занимаемся</h2>
           <ul class="services-list list">
-            <li>
+            <li class="services-item">
               <img src="./images/box1.jpg" alt="Руки на клавиатуре" width="370" height="294" />
             </li>
-            <li>
+            <li class="services-item">
               <img
                 src="./images/box2.jpg"
                 alt="В одной руке телефон вторая рука на клавиатуре"
@@ -97,7 +97,7 @@
                 height="294"
               />
             </li>
-            <li>
+            <li class="services-item">
               <img
                 src="./images/box3.jpg"
                 alt="В руках планшет и стилус"
