--- a/portfolio.html
+++ b/portfolio.html
@@ -28,7 +28,7 @@
           <a class="logo" href="./index.html">Web<span class="logo-part">Studio</span></a>
           <ul class="site-nav list">
             <li class="item"><a href="./index.html" class="link">Студия</a></li>
-            <li class="item"><a href="./portfolio.html" class="link">Портфолио</a></li>
+            <li class="item"><a href="./portfolio.html" class="link current">Портфолио</a></li>
             <li class="item"><a href="" class="link">Контакты</a></li>
           </ul>
         </nav>
