Добавляет стили для геометрии

--- a/index.html
+++ b/index.html
@@ -120,8 +120,10 @@
                 width="270"
                 height="260"
               />
-              <h3 class="member-name">Игорь Демьяненко</h3>
-              <p class="member-position">Product Designer</p>
+              <div class="content">
+                <h3 class="member-name">Игорь Демьяненко</h3>
+                <p class="member-position">Product Designer</p>
+              </div>
             </li>
             <li class="member-item">
               <img
@@ -130,8 +132,10 @@
                 width="270"
                 height="260"
               />
-              <h3 class="member-name">Ольга Репина</h3>
-              <p class="member-position">Frontend Developer</p>
+              <div class="content">
+                <h3 class="member-name">Ольга Репина</h3>
+                <p class="member-position">Frontend Developer</p>
+              </div>
             </li>
             <li class="member-item">
               <img
@@ -140,18 +144,22 @@
                 width="270"
                 height="260"
               />
-              <h3 class="member-name">Николай Тарасов</h3>
-              <p class="member-position">Marketing</p>
+              <div class="content">
+                <h3 class="member-name">Николай Тарасов</h3>
+                <p class="member-position">Marketing</p>
+              </div>
             </li>
-            <li>
+            <li class="member-item">
               <img
                 src="./images/teammember4.jpg"
                 alt="Мужчина с бородой в очках"
                 width="270"
                 height="260"
               />
-              <h3 class="member-name">Михаил Ермаков</h3>
-              <p class="member-position">UI Designer</p>
+              <div class="content">
+                <h3 class="member-name">Михаил Ермаков</h3>
+                <p class="member-position">UI Designer</p>
+              </div>
             </li>
           </ul>
         </div>
@@ -160,10 +168,12 @@
     <!--Подвал сайта-->
     <footer class="footer">
       <div class="container">
-        <a class="logo" href="./index.html">Web<span class="logo-studio">Studio</span></a>
+        <a class="logo logo-margin" href="./index.html"
+          >Web<span class="logo-studio">Studio</span></a
+        >
         <address class="address">
           <ul class="list">
-            <li>
+            <li class="item">
               <a
                 class="location"
                 href="https://goo.gl/maps/8b3qc9g8HUJVJRzd8"
@@ -172,10 +182,10 @@
                 >г. Киев, пр-т Леси Украинки, 26</a
               >
             </li>
-            <li>
+            <li class="item">
               <a class="address-contacts" href="mailto:info@example.com">info@example.com</a>
             </li>
-            <li>
+            <li class="item">
               <a class="address-contacts" href="tel:+380991111111">+38 099 111 11 11</a>
             </li>
           </ul>
