--- a/portfolio.html
+++ b/portfolio.html
@@ -27,8 +27,8 @@
         <nav class="nav">
           <a class="logo" href="./index.html">Web<span class="logo-part">Studio</span></a>
           <ul class="site-nav list">
-            <li class="item"><a href="./index.html" class="link">Студия</a></li>
-            <li class="item"><a href="./portfolio.html" class="link current">Портфолио</a></li>
+            <li class="item"><a href="./index.html" class="link current">Студия</a></li>
+            <li class="item"><a href="./portfolio.html" class="link">Портфолио</a></li>
             <li class="item"><a href="" class="link">Контакты</a></li>
           </ul>
         </nav>
@@ -44,102 +44,133 @@
     <!-- Основной контент -->
     <main>
       <!-- Портфолио проектов -->
-      <section>
+      <section class="section">
         <h1 class="visually-hidden">Портфолио проектов</h1>
-        <ul class="filter-list list">
-          <li><button class="filter-item" type="button">Все</button></li>
-          <li><button class="filter-item" type="button">Веб-сайты</button></li>
-          <li><button class="filter-item" type="button">Приложения</button></li>
-          <li><button class="filter-item" type="button">Дизайн</button></li>
-          <li><button class="filter-item" type="button">Маркетинг</button></li>
-        </ul>
-        <ul class="projects-list list">
-          <li>
-            <img
-              src="./images/project1.jpg"
-              alt="ноутбук со страницей сайта"
-              width="370"
-              height="294"
-            />
-            <h2 class="project-title">Технокряк</h2>
-            <p class="project-type">Веб-сайт</p>
-          </li>
-          <li>
-            <img
-              src="./images/project2.jpg"
-              alt="двое мужчин играют в баскетбол "
-              width="370"
-              height="294"
-            />
-            <h2 class="project-title">Постер <span lang="en">New Orlean vs Golden Star</span></h2>
-            <p class="project-type">Дизайн</p>
-          </li>
-          <li>
-            <img src="./images/project3.jpg" alt="логотип ресторана" width="370" height="294" />
-            <h2 class="project-title">Ресторан <span lang="en">Seafood</span></h2>
-            <p class="project-type">Приложение</p>
-          </li>
-          <li>
-            <img src="./images/project4.jpg" alt="наушники" width="370" height="294" />
-            <h2 class="project-title">Проект <span lang="en">Prime</span></h2>
-            <p class="project-type">Маркетинг</p>
-          </li>
-          <li>
-            <img src="./images/project5.jpg" alt="две коробки" width="370" height="294" />
-            <h2 class="project-title">Проект <span lang="en">Boxes</span></h2>
-            <p class="project-type">Приложение</p>
-          </li>
-          <li>
-            <img src="./images/project6.jpg" alt="монитор компьютера" width="370" height="294" />
-            <h2 class="project-title" lang="en">Inspiration has no Borders</h2>
-            <p class="project-type">Веб-сайт</p>
-          </li>
-          <li>
-            <img src="./images/project7.jpg" alt="раскрытый журнал" width="370" height="294" />
-            <h2 class="project-title">Издание <span lang="en">Limited Edition</span></h2>
-            <p class="project-type">Дизайн</p>
-          </li>
-          <li>
-            <img src="./images/project8.jpg" alt="этикетка с логотипом" width="370" height="294" />
-            <h2 class="project-title">Проект <span lang="en">LAB</span></h2>
-            <p class="project-type">Маркетинг</p>
-          </li>
-          <li>
-            <img
-              src="./images/project9.jpg"
-              alt="руки на клавиатуре ноутбука"
-              width="370"
-              height="294"
-            />
-            <h2 class="project-title" lang="en">Growing Business</h2>
-            <p class="project-type">Приложение</p>
-          </li>
-        </ul>
+        <div class="container">
+          <ul class="filter-list list">
+            <li class="item"><button class="filter-item" type="button">Все</button></li>
+            <li class="item"><button class="filter-item" type="button">Веб-сайты</button></li>
+            <li class="item"><button class="filter-item" type="button">Приложения</button></li>
+            <li class="item"><button class="filter-item" type="button">Дизайн</button></li>
+            <li class="item"><button class="filter-item" type="button">Маркетинг</button></li>
+          </ul>
+          <ul class="projects-list list">
+            <li class="item">
+              <img
+                src="./images/project1.jpg"
+                alt="ноутбук со страницей сайта"
+                width="370"
+                height="294"
+              />
+              <div class="content">
+                <h2 class="project-title">Технокряк</h2>
+                <p class="project-type">Веб-сайт</p>
+              </div>
+            </li>
+            <li class="item">
+              <img
+                src="./images/project2.jpg"
+                alt="двое мужчин играют в баскетбол "
+                width="370"
+                height="294"
+              />
+              <div class="content">
+                <h2 class="project-title">
+                  Постер <span lang="en">New Orlean vs Golden Star</span>
+                </h2>
+                <p class="project-type">Дизайн</p>
+              </div>
+            </li>
+            <li class="item">
+              <img src="./images/project3.jpg" alt="логотип ресторана" width="370" height="294" />
+              <div class="content">
+                <h2 class="project-title">Ресторан <span lang="en">Seafood</span></h2>
+                <p class="project-type">Приложение</p>
+              </div>
+            </li>
+            <li class="item">
+              <img src="./images/project4.jpg" alt="наушники" width="370" height="294" />
+              <div class="content">
+                <h2 class="project-title">Проект <span lang="en">Prime</span></h2>
+                <p class="project-type">Маркетинг</p>
+              </div>
+            </li>
+            <li class="item">
+              <img src="./images/project5.jpg" alt="две коробки" width="370" height="294" />
+              <div class="content">
+                <h2 class="project-title">Проект <span lang="en">Boxes</span></h2>
+                <p class="project-type">Приложение</p>
+              </div>
+            </li>
+            <li class="item">
+              <img src="./images/project6.jpg" alt="монитор компьютера" width="370" height="294" />
+              <div class="content">
+                <h2 class="project-title" lang="en">Inspiration has no Borders</h2>
+                <p class="project-type">Веб-сайт</p>
+              </div>
+            </li>
+            <li class="item">
+              <img src="./images/project7.jpg" alt="раскрытый журнал" width="370" height="294" />
+              <div class="content">
+                <h2 class="project-title">Издание <span lang="en">Limited Edition</span></h2>
+                <p class="project-type">Дизайн</p>
+              </div>
+            </li>
+            <li class="item">
+              <img
+                src="./images/project8.jpg"
+                alt="этикетка с логотипом"
+                width="370"
+                height="294"
+              />
+              <div class="content">
+                <h2 class="project-title">Проект <span lang="en">LAB</span></h2>
+                <p class="project-type">Маркетинг</p>
+              </div>
+            </li>
+            <li class="item">
+              <img
+                src="./images/project9.jpg"
+                alt="руки на клавиатуре ноутбука"
+                width="370"
+                height="294"
+              />
+              <div class="content">
+                <h2 class="project-title" lang="en">Growing Business</h2>
+                <p class="project-type">Приложение</p>
+              </div>
+            </li>
+          </ul>
+        </div>
       </section>
     </main>
 
     <!--Подвал сайта-->
     <footer class="footer">
-      <a class="logo" href="./index.html">Web<span class="logo-studio">Studio</span></a>
-      <address class="address">
-        <ul class="list">
-          <li>
-            <a
-              class="location"
-              href="https://goo.gl/maps/8b3qc9g8HUJVJRzd8"
-              target="_blank"
-              rel="noopener noreferrer"
-              >г. Киев, пр-т Леси Украинки, 26</a
-            >
-          </li>
-          <li>
-            <a class="address-contacts" href="mailto:info@example.com">info@example.com</a>
-          </li>
-          <li>
-            <a class="address-contacts" href="tel:+380991111111">+38 099 111 11 11</a>
-          </li>
-        </ul>
-      </address>
+      <div class="container">
+        <a class="logo logo-margin" href="./index.html"
+          >Web<span class="logo-studio">Studio</span></a
+        >
+        <address class="address">
+          <ul class="list">
+            <li class="item">
+              <a
+                class="location"
+                href="https://goo.gl/maps/8b3qc9g8HUJVJRzd8"
+                target="_blank"
+                rel="noopener noreferrer"
+                >г. Киев, пр-т Леси Украинки, 26</a
+              >
+            </li>
+            <li class="item">
+              <a class="address-contacts" href="mailto:info@example.com">info@example.com</a>
+            </li>
+            <li class="item">
+              <a class="address-contacts" href="tel:+380991111111">+38 099 111 11 11</a>
+            </li>
+          </ul>
+        </address>
+      </div>
     </footer>
   </body>
 </html>
